--- a/posts/2019-09-26-stub.md
+++ b/posts/2019-09-26-stub.md
@@ -1,6 +1,6 @@
 ---
-title: Tu Quoque
-author: Julius
+title: Stub
+author: Uma Zalakain
 ---
 
 Vestibulum leo turpis, dignissim quis ultrices sit amet, iaculis ac ligula.
